--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Philippine Showbiz Buzz</title>
+  <title>The Daily Scope</title>
+  <link rel="icon" type="image/svg+xml"
+  href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='g' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' stop-color='%2318230F'/><stop offset='100%' stop-color='%2318230F'/></linearGradient></defs><circle cx='50' cy='50' r='50' fill='url(%23g)'/><text x='50' y='70' font-size='60' font-weight='bold' font-family='Arial' text-anchor='middle' fill='white'>DS</text></svg>">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="blog.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -14,7 +17,7 @@
   <!-- Hero Banner -->
   <section class="hero-banner">
     <div class="hero-text">
-      <h1>Philippine Showbiz Buzz</h1>
+      <h1>THE DAILY SCOOPE</h1>
       <p>Your daily scoop on the hottest celebrity news and entertainment updates.</p>
     </div>
   </section>
@@ -31,6 +34,8 @@
       <!-- Engagement Stats -->
       <div class="engagement">
         <span><i class="fas fa-eye"></i> 18,324 views</span>
+       
+        
       </div>
 
       <p>Nora Aunor, one of the Philippines' most revered film and television stars, passed away at the age of 71. Known for her powerful acting and influential voice, she defined generations of Filipino cinema with roles that deeply resonated with audiences.</p>
@@ -73,7 +78,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Philippine Showbiz Buzz. All Rights Reserved.</p>
+    <p>&copy; 2025 The Daily Scope. All Rights Reserved.</p>
   </footer>
 
 </body>
