--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Hero Banner -->
   <section class="hero-banner">
     <div class="hero-text">
-      <h1>THE DAILY SCOOPE</h1>
+      <h1>THE DAILY SCOPE</h1>
       <p>Your daily scoop on the hottest celebrity news and entertainment updates.</p>
     </div>
   </section>
