--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section class="hero-banner">
     <div class="hero-text">
       <h1>THE DAILY SCOPE</h1>
-      <p>Your daily scoop on the hottest celebrity news and entertainment updates.</p>
+      <p>Your daily scop on the hottest celebrity news and entertainment updates.</p>
     </div>
   </section>
 
