--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
     <!-- Main Article -->
     <main class="main-article">
-      <h2>Nora Aunor, an actor among the Philippines' biggest stars, dies at 71</h2>
+      <h2>USA KA DAMULAG NANLOOD</h2>
       <p class="date">Posted on April 18, 2025</p>
-      <img src="nora-aunor.png" alt="Nora Aunor" class="main-image">
+      <img src="jing.png" alt="Nora Aunor" class="main-image">
 
       <!-- Engagement Stats -->
       <div class="engagement">
@@ -38,9 +38,9 @@
         
       </div>
 
-      <p>Nora Aunor, one of the Philippines' most revered film and television stars, passed away at the age of 71. Known for her powerful acting and influential voice, she defined generations of Filipino cinema with roles that deeply resonated with audiences.</p>
-      <p>With a career spanning over seven decades, Aunor was known for her performances in landmark films like "Himala" and "Tatlong Taong Walang Diyos." Her legacy continues to inspire the current and future generations of actors and filmmakers.</p>
-      <p>She leaves behind a legacy of excellence, courage, and authenticity in the Filipino arts. Tributes are pouring in from across the country, celebrating her immense contribution to Philippine culture.</p>
+      <p>Si Jomil Bestudio, usa ka batan-ong taga Samala, napuno sa kasubo ug kaguol human kini pasagdi sa iyang mga barkada sa ilang giplanong outing.</p>
+      <p>Sa dihang wala siya gi-sipot, nagpadayag siya sa iyang kasakit pinaagi sa hilak ug paghilom. </p>
+      <p>Tungod sa kalawom sa iyang pagbati, midangat siya sa usa ka desisyon nga makalingaw ug makapahinumdom sa kahayag sa kabatan-onan — nga nanglugos nalang siya ug bayot, basin aron mapahungaw ang iyang gibati ug malingaw sa bag-ong eksperyensya.</p>
     </main>
 
     <!-- Sidebar -->
