--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="main-article">
       <h2>USA KA DAMULAG NANLOOD</h2>
       <p class="date">Posted on April 18, 2025</p>
-      <img src="jing.png" alt="Nora Aunor" class="main-image">
+      <img src="jing.jpg" alt="Nora Aunor" class="main-image">
 
       <!-- Engagement Stats -->
       <div class="engagement">
