--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
       </div>
 
-      <p>Si Jomil Bestudio, usa ka batan-ong taga Samala, napuno sa kasubo ug kaguol human kini pasagdi sa iyang mga barkada sa ilang giplanong outing.</p>
+      <p>Si Jomil Bestudio, usa ka batan-ong taga Samal, napuno sa kasubo ug kaguol human kini pasagdi sa iyang mga barkada sa ilang giplanong outing.</p>
       <p>Sa dihang wala siya gi-sipot, nagpadayag siya sa iyang kasakit pinaagi sa hilak ug paghilom. </p>
       <p>Tungod sa kalawom sa iyang pagbati, midangat siya sa usa ka desisyon nga makalingaw ug makapahinumdom sa kahayag sa kabatan-onan — nga nanglugos nalang siya ug bayot, basin aron mapahungaw ang iyang gibati ug malingaw sa bag-ong eksperyensya.</p>
     </main>
